--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   shared_preferences: ^2.1.1
 
 dev_dependencies:
+  build_runner: ^2.4.4
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
